<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <ImageView
        android:id="@+id/ic_weather_now"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_rainy"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/temp_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_now"
        android:textSize="20sp"
        android:layout_marginStart="4dp"/>

    <TextView
        android:id="@+id/name_weather_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rainy"
        android:textSize="20sp"
        android:layout_below="@id/temp_now"
        android:layout_marginStart="4dp"/>

    <TextView
        android:id="@+id/city_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_now"
        android:textSize="20sp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"/>


</RelativeLayout>